// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The input field wrapper component should render a static field 1`] = `
<div
  className="input-field layout test-input-class hide-input"
>
  <InputFieldLabel
    id="testInputId"
    infoLinkURL="http://info.url"
    infoText="Click for more info"
    label="Test Input Label"
    labelLayoutWidth="1/2"
    labelWidthBreakpoint="xs"
    preLabelElement="*"
  />
  <div
    className="layout__item u-fit layout__item--middle test-input-class text-center"
  >
    <div
      className="static-field"
    >
      <div>
        child
      </div>
    </div>
  </div>
  <div
    className="layout__item u-fit input-children"
  >
    <div>
      input child
    </div>
  </div>
</div>
`;

exports[`The input field wrapper component should render a wrapper with all options 1`] = `
<div
  className="input-field layout test-input-class"
>
  <InputFieldLabel
    id="testInputId"
    infoLinkURL="http://info.url"
    infoText="Click for more info"
    label="Test Input Label"
    labelLayoutWidth="1/2"
    labelWidthBreakpoint="xs"
    preLabelElement="*"
  />
  <div
    className="layout__item u-fill layout__item--middle test-input-class text-center"
  >
    <div
      className="input-container layout layout--gutter-xs"
    >
      <div
        className="input-wrapper-children layout__item u-fill"
      >
        <div>
          child
        </div>
      </div>
      <div
        className="layout__item u-fit input-field__field-addition"
      >
        <Icon(RequiredIcon) />
      </div>
    </div>
  </div>
  <div
    className="layout__item u-fit input-children"
  >
    <div>
      input child
    </div>
  </div>
  <InputFieldValidation
    labelLayoutWidth="1/2"
    labelWidthBreakpoint="xs"
    required={true}
    validationError="A validation error!"
  />
</div>
`;

exports[`The input field wrapper component should render a wrapper without any options 1`] = `
<div
  className="input-field layout"
>
  <div
    className="layout__item u-fill layout__item--middle"
  >
    <div
      className="input-container layout layout--gutter-xs"
    >
      <div
        className="input-wrapper-children layout__item u-fill"
      />
    </div>
  </div>
</div>
`;

exports[`The input field wrapper component should render a wrapper without the validation error 1`] = `
<div
  className="input-field layout test-input-class"
>
  <InputFieldLabel
    id="testInputId"
    infoLinkURL="http://info.url"
    infoText="Click for more info"
    label="Test Input Label"
    labelLayoutWidth="1/2"
    labelWidthBreakpoint="xs"
    preLabelElement="*"
  />
  <div
    className="layout__item u-fill layout__item--middle test-input-class text-center"
  >
    <div
      className="input-container layout layout--gutter-xs"
    >
      <div
        className="input-wrapper-children layout__item u-fill"
      >
        <div>
          child
        </div>
      </div>
      <div
        className="layout__item u-fit input-field__field-addition"
      >
        <Icon(RequiredIcon) />
      </div>
    </div>
  </div>
  <div
    className="layout__item u-fit input-children"
  >
    <div>
      input child
    </div>
  </div>
</div>
`;
